@@ -146,14 +146,17 @@ sed -e 's%@srcdir@%'${srcpath}'%' tests/local-test/test.cpp.in > tests/local-tes
 sed -e 's%@py_path@%'${py_path}'%' tests/test/test.sh.in > tests/test/test.sh.tmp.1
 sed -e 's%@py_path@%'${py_path}'%' tests/adv-test/test.sh.in > tests/adv-test/test.sh.tmp.1
 sed -e 's%@py_path@%'${py_path}'%' tests/test-long/test.sh.in > tests/test-long/test.sh.tmp.1
+sed -e 's%@py_path@%'${py_path}'%' tests/test-webserver/test.sh.in > tests/test-webserver/test.sh.tmp.1
 sed -e 's%@py_path@%'${py_path}'%' tests/local-test/test.sh.in > tests/local-test/test.sh.tmp.1
 sed -e 's%@srcdir@%'${srcpath}'%' tests/test/test.sh.tmp.1 > tests/test/test.sh
 sed -e 's%@srcdir@%'${srcpath}'%' tests/adv-test/test.sh.tmp.1 > tests/adv-test/test.sh
 sed -e 's%@srcdir@%'${srcpath}'%' tests/test-long/test.sh.tmp.1 > tests/test-long/test.sh
+sed -e 's%@srcdir@%'${srcpath}'%' tests/test-webserver/test.sh.tmp.1 > tests/test-webserver/test.sh
 sed -e 's%@srcdir@%'${srcpath}'%' tests/local-test/test.sh.tmp.1 > tests/local-test/test.sh
 rm -f tests/test/test.sh.tmp.*
 rm -f tests/adv-test/test.sh.tmp.*
 rm -f tests/test-long/test.sh.tmp.*
+rm -f tests/test-webserver/test.sh.tmp.*
 rm -f tests/local-test/test.sh.tmp.*
 
 AC_MSG_CHECKING([for python include directory])
@@ -573,6 +576,8 @@ chmod o+x tests/adv-test/test.sh
 chmod u+x tests/adv-test/test.sh
 chmod o+x tests/test-long/test.sh
 chmod u+x tests/test-long/test.sh
+chmod o+x tests/test-webserver/test.sh
+chmod u+x tests/test-webserver/test.sh
 chmod o+x tests/local-test/test.sh
 chmod u+x tests/local-test/test.sh
 
@@ -751,6 +756,7 @@ if test -n "${PDB2PQR_SUBDIRS}"; then
 	tests/test/Makefile
 	tests/adv-test/Makefile
 	tests/test-long/Makefile
+	tests/test-webserver/Makefile
 	tests/local-test/Makefile
    ])
    echo
